// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Original Components/Controls/CheckBox CheckBox 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  opacity: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-4:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-4:hover:before {
  display: block;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-5 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-5+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-5+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-5:disabled+label {
  cursor: not-allowed;
}

.emotion-6 span {
  padding: 0;
}

.emotion-6 div {
  position: absolute;
  top: 0;
  display: none;
}

.emotion-7 {
  width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-8 path {
  fill: white!important;
}

.emotion-11 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-11+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-11+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: #175bf5;
  border-radius: 0.25rem;
}

.emotion-11:disabled+label {
  cursor: not-allowed;
}

.emotion-12 span {
  padding: 0;
}

.emotion-12 div {
  position: absolute;
  top: 0;
  display: block;
}

.emotion-15 {
  opacity: 0.3;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-16 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-16:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-48 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-48+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-48+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: inherit;
  box-shadow: inset 0px 0px 0px 0.125rem #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-48:disabled+label {
  cursor: not-allowed;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-5"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-_00"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-6"
              htmlFor="styled-checkbox-_00"
            >
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-11"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-_00"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-12"
              htmlFor="styled-checkbox-_00"
            >
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-15"
        >
          <span
            className="emotion-16"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-11"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-_00"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-12"
              htmlFor="styled-checkbox-_00"
            >
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-11"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-_00"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-12"
              htmlFor="styled-checkbox-_00"
            >
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-15"
        >
          <span
            className="emotion-16"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-11"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-_00"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-12"
              htmlFor="styled-checkbox-_00"
            >
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-5"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-_00"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-6"
              htmlFor="styled-checkbox-_00"
            >
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-15"
        >
          <span
            className="emotion-16"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-5"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-_00"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-6"
              htmlFor="styled-checkbox-_00"
            >
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </label>
          </span>
        </span>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-48"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-_00"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-6"
              htmlFor="styled-checkbox-_00"
            >
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-11"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-_00"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-12"
              htmlFor="styled-checkbox-_00"
            >
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-15"
        >
          <span
            className="emotion-16"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-11"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-_00"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-12"
              htmlFor="styled-checkbox-_00"
            >
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-11"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-_00"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-12"
              htmlFor="styled-checkbox-_00"
            >
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-15"
        >
          <span
            className="emotion-16"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-11"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-_00"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-12"
              htmlFor="styled-checkbox-_00"
            >
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-48"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-_00"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-6"
              htmlFor="styled-checkbox-_00"
            >
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-15"
        >
          <span
            className="emotion-16"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-48"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-_00"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-6"
              htmlFor="styled-checkbox-_00"
            >
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </label>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Original Components/Controls/CheckBox CheckBox with Label 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  opacity: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-4:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-4:hover:before {
  display: block;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-5 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-5+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-5+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-5:disabled+label {
  cursor: not-allowed;
}

.emotion-6 span {
  padding: 0;
}

.emotion-6 div {
  position: absolute;
  top: 0;
  display: none;
}

.emotion-7 {
  width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-8 path {
  fill: white!important;
}

.emotion-9 {
  padding-left: 0.25rem;
  font-size: 0.9375rem;
  font-weight: 400;
  color: #191927;
  white-space: nowrap;
}

.emotion-12 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-12+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-12+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: #175bf5;
  border-radius: 0.25rem;
}

.emotion-12:disabled+label {
  cursor: not-allowed;
}

.emotion-13 span {
  padding: 0;
}

.emotion-13 div {
  position: absolute;
  top: 0;
  display: block;
}

.emotion-17 {
  opacity: 0.3;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-18 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-18:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-55 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-55+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-55+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: inherit;
  box-shadow: inset 0px 0px 0px 0.125rem #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-55:disabled+label {
  cursor: not-allowed;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div>
      <div
        className="emotion-2"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="emotion-5"
                data-testid="checkbox"
                disabled={false}
                id="styled-checkbox-_00"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-6"
                htmlFor="styled-checkbox-_00"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                  />
                </div>
              </label>
            </span>
            <span
              className="emotion-9"
            >
              Not checked single
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="emotion-12"
                data-testid="checkbox"
                disabled={false}
                id="styled-checkbox-_00"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-13"
                htmlFor="styled-checkbox-_00"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                  />
                </div>
              </label>
            </span>
            <span
              className="emotion-9"
            >
              Checked Single
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-17"
          >
            <span
              className="emotion-18"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="emotion-12"
                data-testid="checkbox"
                disabled={true}
                id="styled-checkbox-_00"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-13"
                htmlFor="styled-checkbox-_00"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                  />
                </div>
              </label>
            </span>
            <span
              className="emotion-9"
            >
              Disabled single
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="emotion-12"
                data-testid="checkbox"
                disabled={false}
                id="styled-checkbox-_00"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-13"
                htmlFor="styled-checkbox-_00"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                  />
                </div>
              </label>
            </span>
            <span
              className="emotion-9"
            >
              Checked intermediate
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-17"
          >
            <span
              className="emotion-18"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="emotion-12"
                data-testid="checkbox"
                disabled={true}
                id="styled-checkbox-_00"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-13"
                htmlFor="styled-checkbox-_00"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                  />
                </div>
              </label>
            </span>
            <span
              className="emotion-9"
            >
              Disabled checked intermediate
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="emotion-5"
                data-testid="checkbox"
                disabled={false}
                id="styled-checkbox-_00"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-6"
                htmlFor="styled-checkbox-_00"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                  />
                </div>
              </label>
            </span>
            <span
              className="emotion-9"
            >
              Not checked intermediate
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-17"
          >
            <span
              className="emotion-18"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="emotion-5"
                data-testid="checkbox"
                disabled={true}
                id="styled-checkbox-_00"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-6"
                htmlFor="styled-checkbox-_00"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                  />
                </div>
              </label>
            </span>
            <span
              className="emotion-9"
            >
              Disabled not checked intermediate
            </span>
          </span>
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="emotion-55"
                data-testid="checkbox"
                disabled={false}
                id="styled-checkbox-_00"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-6"
                htmlFor="styled-checkbox-_00"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                  />
                </div>
              </label>
            </span>
            <span
              className="emotion-9"
            >
              Not checked single
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="emotion-12"
                data-testid="checkbox"
                disabled={false}
                id="styled-checkbox-_00"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-13"
                htmlFor="styled-checkbox-_00"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                  />
                </div>
              </label>
            </span>
            <span
              className="emotion-9"
            >
              Checked Single
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-17"
          >
            <span
              className="emotion-18"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="emotion-12"
                data-testid="checkbox"
                disabled={true}
                id="styled-checkbox-_00"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-13"
                htmlFor="styled-checkbox-_00"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                  />
                </div>
              </label>
            </span>
            <span
              className="emotion-9"
            >
              Disabled single
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="emotion-12"
                data-testid="checkbox"
                disabled={false}
                id="styled-checkbox-_00"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-13"
                htmlFor="styled-checkbox-_00"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                  />
                </div>
              </label>
            </span>
            <span
              className="emotion-9"
            >
              Checked intermediate
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-17"
          >
            <span
              className="emotion-18"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="emotion-12"
                data-testid="checkbox"
                disabled={true}
                id="styled-checkbox-_00"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-13"
                htmlFor="styled-checkbox-_00"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                  />
                </div>
              </label>
            </span>
            <span
              className="emotion-9"
            >
              Disabled checked intermediate
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="emotion-55"
                data-testid="checkbox"
                disabled={false}
                id="styled-checkbox-_00"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-6"
                htmlFor="styled-checkbox-_00"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                  />
                </div>
              </label>
            </span>
            <span
              className="emotion-9"
            >
              Not checked intermediate
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-17"
          >
            <span
              className="emotion-18"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="emotion-55"
                data-testid="checkbox"
                disabled={true}
                id="styled-checkbox-_00"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-6"
                htmlFor="styled-checkbox-_00"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                  />
                </div>
              </label>
            </span>
            <span
              className="emotion-9"
            >
              Disabled not checked intermediate
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Original Components/Controls/CheckBox CheckBox with Props 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  opacity: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-4:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-4:hover:before {
  display: block;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-5 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-5+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-5+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-5:disabled+label {
  cursor: not-allowed;
}

.emotion-6 span {
  padding: 0;
}

.emotion-6 div {
  position: absolute;
  top: 0;
  display: none;
}

.emotion-7 {
  width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-8 path {
  fill: white!important;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-5"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-_00"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-6"
              htmlFor="styled-checkbox-_00"
            >
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </label>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
